MSG-303 keep mission protocol tests Java 17 compatible